[project]
name = "lingbot-map"
version = "0.1.0"
description = "LingBot-Map: Geometric Context Transformer for Streaming 3D Reconstruction"
requires-python = ">= 3.10"
dependencies = [
    "Pillow",
    "huggingface_hub",
    "einops",
    "safetensors",
    "opencv-python",
    "tqdm",
    "scipy",
    "torchvision",
]

[project.optional-dependencies]
vis = ["viser>=0.2.23", "trimesh", "matplotlib", "onnxruntime", "requests"]
demo = ["lingbot-map[vis]"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lingbot_map*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
lingbot-map = { path = ".", editable = true }
torch = { version = "==2.9.1 ", index = "https://download.pytorch.org/whl/cu128"}
torchvision = {version = "==0.24.1 ", index = "https://download.pytorch.org/whl/cu128"}

[tool.pixi.environments]
default = { solve-group = "default" }
demo = { features = ["demo"], solve-group = "default" }
vis = { features = ["vis"], solve-group = "default" }

[tool.pixi.tasks]
